[gd_scene load_steps=5 format=3 uid="uid://c3lo5apx1ef2i"]

[ext_resource type="Theme" uid="uid://d4lygjei3ld2f" path="res://themes/gothic_scenario.tres" id="1_6hh5j"]
[ext_resource type="Script" path="res://scenarios/leipzig/main_st/main_st.gd" id="2_1uytf"]
[ext_resource type="PackedScene" uid="uid://bdtq7xo1dfigb" path="res://scenarios/aa_fade_panels/fade_panel.tscn" id="3_3xp28"]
[ext_resource type="PackedScene" uid="uid://d3bii8k8584d" path="res://scenarios/aa_fade_panels/text_box.tscn" id="4_1exxt"]

[node name="MainSt" type="TextureRect"]
offset_left = 40.0
offset_top = 40.0
offset_right = 1560.0
offset_bottom = 1040.0
theme = ExtResource("1_6hh5j")
script = ExtResource("2_1uytf")

[node name="FadePanel" parent="." instance=ExtResource("3_3xp28")]
visible = false
layout_mode = 0

[node name="TextBox" parent="." instance=ExtResource("4_1exxt")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 1210.0
offset_bottom = 378.0

[node name="Time" type="Label" parent="TextBox"]
layout_mode = 2

[node name="Intro" type="Label" parent="TextBox"]
custom_minimum_size = Vector2(1200, 10)
layout_mode = 2
text = "You are in Leipzig's Main Street. You decide to..."
autowrap_mode = 2

[node name="Options" type="VBoxContainer" parent="TextBox"]
layout_mode = 2

[node name="GateInside" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...walk across to the city gates."
flat = true
alignment = 0

[node name="SideSt" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...turn down a side street leading to the crafts district."
flat = true
alignment = 0

[node name="Inn" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...the Gasthaus, a popular Inn on the Main Street."
flat = true
alignment = 0

[node name="Market" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...round the bend and visit the central market of Leipzig."
flat = true
alignment = 0

[node name="Square" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...continue down the main street to the main square and Rathaus."
flat = true
alignment = 0

[node name="LatinQuarter" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...head to the Latin quarter, with its churches and university."
flat = true
alignment = 0

[node name="Lane" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...slip down a narrow laneway and see where it takes you."
flat = true
alignment = 0

[node name="Outcome" type="Label" parent="TextBox"]
visible = false
layout_mode = 2

[connection signal="pressed" from="TextBox/Options/GateInside" to="." method="_on_gate_inside_pressed"]
[connection signal="pressed" from="TextBox/Options/SideSt" to="." method="_on_side_st_pressed"]
[connection signal="pressed" from="TextBox/Options/Inn" to="." method="_on_inn_pressed"]
[connection signal="pressed" from="TextBox/Options/Market" to="." method="_on_market_pressed"]
[connection signal="pressed" from="TextBox/Options/Square" to="." method="_on_square_pressed"]
[connection signal="pressed" from="TextBox/Options/LatinQuarter" to="." method="_on_latin_quarter_pressed"]
[connection signal="pressed" from="TextBox/Options/Lane" to="." method="_on_lane_pressed"]
